# miscellaneous-tasks

./: .gitignore
chat-with-linkedin-profile/: README.md  gradio_chat_with_linkedin.ipynb  gradio_evaluator_optimizer.ipynb  main.py  pyproject.toml
chat-with-linkedin-profile/linkedin_docs/: summary.txt
langgraph_agenticai_udemy/: langgraph_v1.ipynb  pyproject.toml
langgraph_agenticai_udemy/.ipynb_checkpoints/: README-checkpoint.md
reportlab_learning/: main.py  pyproject.toml
reportlab_learning/docs_reportlab/: graphics_and_text_with_pdfgen.ipynb  introduction.ipynb
reportlab_learning/docs_reportlab/.ipynb_checkpoints/: graphics_and_text_with_pdfgen-checkpoint.ipynb
transformers/.ipynb_checkpoints/: README-checkpoint.md  transformers_nb1-checkpoint.ipynb
