[project]
name = "langgraph-agenticai-udemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.8.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.0.10",
    "python-dotenv>=1.2.2",
]
